Submit works on volunteer workflow page

--- a/dj/volunteers/templates/episode_review.html
+++ b/dj/volunteers/templates/episode_review.html
@@ -80,129 +80,18 @@
   </table>
 
   <h2><a name="step-4">Step 4</a></h2>
-  <p>Enter any comments if you have them, and choose a resolution:</p>
+  <p>Enter any comments if you have them, and choose <strong>"Ready to Encode"</strong> if
+     you have selected all the video files you need.<br />Choose "This Episode is
+     Borked" if there are issues with the video files that can't be fixed and
+     this talk should not be encoded.
+  </p>
   <table>
   <tbody>
     {{ comment_form.as_table }}
   </tbody>
   </table>
   <br />
-  <table>
-  <tbody>
-    <tr>
-        <td><a href=""><button>Save and Keep Editing</button></a></td>
-        <td><a href=""><button>Ready to Encode</button></a></td>
-        <td><a href=""><button>This Episode is Borked</button></a></td>
-  </tbody>
-  </table>
-
-<!--
-
-
-
-
-
-{{ clrfformset.management_form }}
-<table border=1>
-<tbody id="accordian">
-{% for cl,chap,clrfform in clrffs %}
-
-  <tr id="{{cl.raw_file.id}}">
-    <td>
-  {{clrfform.clid}}
-  <table border=1>
-  <tbody>
-    <tr>
-    <td>
-    {{clrfform.clid}}
-      <table border=1>
-      <tbody>
-
-<tr><td><video src ="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" controls width=200
-    poster ="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png"
-    ></video>
-    </td></tr>
-     </tbody>
-     </table>
-    <td>
-    <table border=1>
-    <tbody>
-        <tr> <th></th> <th><a href="#{{cl.raw_file.id}}">Raw File</a></th> <th>Cut List</th> </tr>
-
-      <tr><td></td>
-
-    {% if user.is_authenticated %}
-        <td>{{ clrfform.trash.label_tag }}{{ clrfform.trash }}</td>
-    {% endif %}
-        <td>{{ clrfform.apply.label_tag }}{{ clrfform.apply }}
-</td>
-      </tr>
-
-      <tr> <td>Start</td><td><b>{% if same_dates %}{{cl.raw_file.start|date:"H:i:s"}}{% else %}{{cl.raw_file.start}}{% endif %}</b></td> <td>{{ clrfform.start }}{{chap.0}}</td>
-      </tr>
-      <tr> <td>Duration:</td> <td>{{cl.raw_file.duration}}</td> </tr>
-      <tr> <td>End</td><td> {% if same_dates %}{{cl.raw_file.end|date:"H:i:s"}}{% else %}{{cl.raw_file.end}}{% endif %} </td> <td>{{ clrfform.end }}{{chap.1}}</td> </tr>
-      <tr> <td>Comments:</td> <td>{#{clrfform.rf_comment}#}</td> <td>{{clrfform.cl_comment}}</td> </tr>
-      <tr> <td>
-         {{ clrfform.split.label_tag }}{{ clrfform.split }}
-</td>
-      <td><a href="{% url admin:main_raw_file_change cl.raw_file.id%}">admin</a></td>
-      <td>
-<a href="{% url admin:main_cut_list_change cl.id%}">admin</a>
-<a href="{% url admin:main_cut_list_change cl.id%}delete/">delete</a>
-     </td>
-      </tr>
-
-    </tbody>
-    </table>
-    </td>
-
-  </tbody>
-  </table>
-  </tr>
-
-  {% if clrfform.errors %}
-  <tr> {% for field in clrfform %}
-          <td>{{field.name}}{{ field.errors }}</td>
-       {% endfor %} </tr>
-  {% endif %}
-
-  {% if cl.raw_file.ocrtext %}
-  <tr>
-  <td>
-  <table border=1>
-  <tbody>
-    <tr>
-    <td>{{cl.raw_file.ocrtext|linebreaks}}</td>
-    </tr>
-  </tbody>
-  </table>
-  </td>
-  </tr>
-  {% endif %}
-
-{% endfor %}
-</tbody>
-</table>
-
-
-<a href="{% url raw_list episode.id %}{{episode.slug}}.m3u">raw-playlist</a>
-<a href="{% url raw_list episode.id %}{{episode.slug}}-ogv.m3u?ext=ogv">raw-ogv-playlist</a>
-
-<table border=1>
-<tbody>
-    <tr><td>
-<a href="{% url admin:main_raw_file_changelist %}?location__id__exact={{episode.location.id}}&start__year={{episode.start|date:"Y"}}&start__month={{episode.start|date:"m"}}&start__day={{episode.start|date:"d"}}">raw files day</a>
-    </td></tr>
-{{ add_cutlist_to_ep }}
-</tbody>
-</table>
-<table style="border:1px">
-  <tbody>
-    {{ comment_form.as_table }}
-  </tbody>
-  </table>
-<input type="submit" value="Save">-->
+  <input type="submit" value="Submit" /></td>
 </form>
 {% else %}
   <p>This episode has already been reviewed. Thank you for volunteering!</p>
