--- a/dj/volunteers/templates/episode_review.html
+++ b/dj/volunteers/templates/episode_review.html
@@ -24,7 +24,7 @@
 <div id="recording-sheets" style="margin:10px 0">
     <table>
     <tbody>
-        <tr><th colspan="{{ sheets.count }}">Recording Sheets</th></tr>
+        <tr><th colspan="{{ sheets.count }}">Click on thumnails to see recording sheets</th></tr>
         <tr>
             {% for img in sheets %}
             <td><a href="http://192.237.240.167/static/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}">
@@ -50,17 +50,13 @@
       <input type="submit" value="Unbork" />
   </form>
 {% else %}{% if episode.state == 1 %}
-<form action="{% url episode episode.id episode.slug episode.edit_key %}" method="get">
-      <input style="font-size:1.2em" type="submit" value="I need to do something unusual. Give me the advanced interface" />
-      <p>(Make sure you really know what you are doing before pressing this button!)</p>
-</form>
-<br />
 <form action="." method="post">
   {% csrf_token %}
 
   <h2><a name="step-1">Step 1</a></h2>
-  <p>Select which video files belong to this talk. You can use the Recording
-     Sheets above for reference.
+  <p>Select which video files belong to this talk. You can use the recording
+     sheets above for reference. Click on the play button for each clip to
+     see the video.
   <p>
   {% include "_video_formset.html" %}
 
@@ -84,8 +80,9 @@
   </table>
 
   <h2>For Perfectionists</h2>
-  <p>If you want to review what you've selected, click 'Save', then the 'Review'
-     link (otherise skip to <a href="#step-2">Step 2</a>):</p>
+  <p>If you want to review only the videos that you want to be encoded, click
+     'Save', then the 'Review' link (otherise skip to <a href="#step-2">Step 2</a>):
+  </p>
   <table>
   <tbody>
     <tr>
@@ -94,6 +91,12 @@
     </tr>
   </tbody>
   </table>
+  <br />
+  <h2>Advanced</h2>
+  <p>(Make sure you really know what you are doing before pressing this button!)</p>
+  <button style="font-size:1.1em"><a href="{% url episode episode.id episode.slug episode.edit_key %}">I need to do something unusual. Give me the advanced interface</a></button>
+
+<br />
   <br />
   <h2><a name="step-2">Step 2</a></h2>
   <p>Enter any comments if you have them, and choose <strong>"Ready to Encode"</strong> if
