--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -31,7 +31,7 @@
 <tbody>
 <tr><td>Name</td><td><b>{{episode.name}}</b></td></tr>
 <tr><td>Author(s)</td><td>{{episode.authors}} </td></tr>
-<tr><td>Location</td><td><a href="{% url admin:main_location_change location.id%}">{{episode.location}}</a></td></tr>
+<tr><td>Location</td><td><a href="{% url admin:main_location_change location.id%}">{{episode.location}}</a></td><td><a href="{% url episode_list client_slug=client.slug show_slug=show.slug location_slug=episode.location.slug start_day=episode.start|date:"d" %}">Room</a></td></tr>
 <tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
 <tr><td>Start</td><td>{% if same_dates %}{{episode.start|date:"H:i"}}{% else %}{{episode.start}}{% endif %}</td>
 <td>First Raw Start</td><td>{% if same_dates %}{{clrffs.0.0.raw_file.start|date:"H:i"}}{% else %}{{clrffs.0.0.raw_file.start}}{% endif %}</td></tr>
