--- a/dj/volunteers/templates/_video_formset.html
+++ b/dj/volunteers/templates/_video_formset.html
@@ -7,23 +7,25 @@
     <tr>
       <td><video src ="{{ MEDIA_URL }}/{{ cutlist.base_url }}.ogv" controls width=200 poster="{{ MEDIA_URL }}/{{ cutlist.base_url }}.png"></video></td>
       <td>
-          {% if use_raw %}
+         {% if use_raw %}
           {% with cutlist as video %}
             {{ video.start|date:"D, d M, Y" }}{% if not same_dates %}<br />-{{ video.end|date:"D, d M, Y" }}{% endif %}<br /><br />
             <strong>Start:</strong> {{ video.start|date:"H:i"}}<br />
             <strong>End:</strong> {{ video.end|date:"H:i" }}<br />
             <strong>Duration:</strong> {{ video.duration }}
           {% endwith %}
-          {% else %}
+         {% else %}
           {% with cutlist.raw_file as video %}
             {{ video.start|date:"D, d M, Y" }}{% if not same_dates %}<br />-{{ video.end|date:"D, d M, Y" }}{% endif %}<br /><br />
             <strong>Start:</strong> {{ video.start|date:"H:i"}}<br />
             <strong>End:</strong> {{ video.end|date:"H:i" }}<br />
             <strong>Duration:</strong> {{ video.duration }}
           {% endwith %}
-          {% endif %}
+         {% endif %}
       </td>
       <td>{{ form.apply }}</td>
+      <td>{{ form.start.label_tag }}:{{ form.start }} {{form.start.help_text}}<br />
+        {{ form.end.label_tag }}:{{ form.end }} {{form.end.help_text}}</td>
     </tr>
   {% endwith %}
   </tbody>
