--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8" />
 
 <script type="text/javascript" src="{{STATIC_URL}}admin/js/urlify.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui/jquery-1.7.2.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui/ui/jquery-ui-1.8.22.custom.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-timepicker-addon.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/login_form.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/fnitize.js"></script>
@@ -16,8 +16,7 @@
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login_form.css">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/main.css">
-<link rel="stylesheet" type="text/css"
-      href="{{STATIC_URL}}js/jquery-ui/themes/ui-lightness/jquery.ui.all.css">
+<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.min.css">
 
 </head>
 <body>
