--- a/dj/volunteers/templates/_video_formset.html
+++ b/dj/volunteers/templates/_video_formset.html
@@ -9,14 +9,13 @@
       <td>
          {% if use_raw %}
           {% with cutlist as video %}
-            {{ video.start|date:"D, d M, Y" }}{% if not same_dates %}<br />-{{ video.end|date:"D, d M, Y" }}{% endif %}<br /><br />
             <strong>Start:</strong> {{ video.start|date:"H:i:s"}}<br />
             <strong>End:</strong> {{ video.end|date:"H:i:s" }}<br />
             <strong>Duration:</strong> {{ video.duration }}
           {% endwith %}
          {% else %}
+          {{ cutlist.raw_file.filename }}<br />
           {% with cutlist.raw_file as video %}
-            {{ video.start|date:"D, d M, Y" }}{% if not same_dates %}<br />-{{ video.end|date:"D, d M, Y" }}{% endif %}<br /><br />
             <strong>Start:</strong> {{ video.start|date:"H:i:s"}}<br />
             <strong>End:</strong> {{ video.end|date:"H:i:s" }}<br />
             <strong>Duration:</strong> {{ video.duration }}
