raw file audio summery and detail pages

--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -55,6 +55,7 @@
 
 {# the room day cells #}
           {% for item,loc in row %}
+
              <td style="background-color:#{{item.alarm_color}};">  
                {% if item.count %}
 
@@ -69,17 +70,19 @@
                    {% else %} 0 {% endif %} </span>
                  {% endfor %}
                  ]<br/>
+
                  <span class="left">expected:</span><span class="right">{{item.talk_gig}} g</span><br/>
                  {% if item.files %}
-                 <span class="left">files: <a style="display: inline-block;" href="/main/dv_set/{{loc.loc.slug}}/{{item.date|date:"Y-m-d"}}/">{{item.files}}</a></span><span class="right">{{item.gig}} g</span><br/>
-                   {% if item.alarm >= 0 %} <span class="left">{{item.alarm}}%</span><span class="right">{{item.variance}} g</span> {% endif %}
-                 {% endif %}
-                 
-                 <span class="left">
-                     <a href="{% url public_play_list %}?client={{client.slug}}&show={{show.slug}}&loc={{loc.loc.slug}}&date={{item.date|date:"Y-m-d"}}">pubs</a>
-                     </span><br/>
+                 <span class="left">files: <a style="display: inline-block;" href="/main/dv_set/{{loc.loc.slug}}/{{item.date|date:"Y-m-d"}}/">{{item.files}}</a> {{item.alarm}}%</span>
+                 <span class="right">{{item.gig}} g</span><br/>
+                   <span class="right">{{item.variance}} g</span><br/>
+
+                 <a style="display: inline-block;" href="{% url raw_file_audio loc.loc.slug item.date|date:"Y-m-d" %}">audio</a>
+                     <a style="display: inline-block;" href="{% url public_play_list %}?client={{client.slug}}&show={{show.slug}}&loc={{loc.loc.slug}}&date={{item.date|date:"Y-m-d"}}">vids</a>
 
                {% endif %}
+
+             {% endif %}
              </td>
           {% endfor %}
           </tr>
