--- a/dj/main/templates/show_stats.html
+++ b/dj/main/templates/show_stats.html
@@ -77,7 +77,7 @@
                  <span class="right">{{item.gig}} g</span><br/>
                    <span class="right">{{item.variance}} g</span><br/>
 
-                 <a style="display: inline-block;" href="{% url raw_file_audio loc.loc.slug item.date|date:"Y-m-d" %}">audio</a>
+                   <a style="display: inline-block;" href="{% url raw_file_audio %}?show_id={{show.id}}&location_slug={{loc.loc.slug}}&start_date={{item.date|date:"Y-m-d"}}">audio</a>
                      <a style="display: inline-block;" href="{% url public_play_list %}?client={{client.slug}}&show={{show.slug}}&loc={{loc.loc.slug}}&date={{item.date|date:"Y-m-d"}}">vids</a>
 
                {% endif %}
